--- a/Part_4_Anomaly_Detection.ipynb
+++ b/Part_4_Anomaly_Detection.ipynb
@@ -45,40 +45,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X3692TPcsJ6J",
-        "outputId": "9e41bbcb-2863-45f0-93f7-7ba2b55143aa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "#loading packages\n",
-        "install.packages(\"factoextra\")\n",
-        "library (anomalize)\n",
-        "library(factoextra)\n",
-        "install.packages(\"tibble\")\n",
-        "library(tibble)\n",
-        "install.packages(\"tidyverse\")\n",
-        "library(tidyverse)\n"
-      ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "7dfhfi1bjA_I",
-        "outputId": "508376b9-8085-437a-d201-06583bc430f4",
+        "outputId": "66be1575-d8e3-4a79-840e-5b6d18d6b4ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 199
@@ -89,7 +57,7 @@
         "df <- read.csv(\"Supermarket_Sales4.csv\")\n",
         "head(df)"
       ],
-      "execution_count": 41,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -133,7 +101,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RIRJHlH4t3d9",
-        "outputId": "44aeaff5-de90-49e0-d0ad-a66c4c695ef8",
+        "outputId": "68b6972e-c2b0-45ac-afb5-0aaa17139124",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -143,7 +111,7 @@
         "#check the data types of the two columns\n",
         "sapply(df, class)"
       ],
-      "execution_count": 42,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -172,89 +140,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "onsVMDMSuBvn",
-        "outputId": "2264d702-8e34-4e38-c83b-6dc814746d00",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "sbfgnvsNeUoJ"
+      },
+      "source": [
+        "df$Date <- as.POSIXct(df$Date, \"%m-%d-%Y\",tz = \"GMT\")\n"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OuKSHQOVcbbe"
+      },
+      "source": [
+        "#Extracting the day and month from date and converting day to numeric\n",
+        "\n",
+        "df$day <- format(df$Date, \"%d\")\n",
+        "df$month <- format(df$Date, \"%m\")\n",
+        "df$day <- as.numeric(df$day)"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "onsVMDMSuBvn"
       },
       "source": [
         "#convert the date datatype from factor to date\n",
-        "df$Date <- as.Date(df$Date)\n",
-        "sapply(df, class)"
+        "monthly_df <- df %>%\n",
+        "group_by(Date,month) %>% summarise_at(vars(Sales),funs(sum(.,na.rm=TRUE)))\n"
       ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "     Date     Sales \n",
-              "   \"Date\" \"numeric\" "
-            ],
-            "text/latex": "\\begin{description*}\n\\item[Date] 'Date'\n\\item[Sales] 'numeric'\n\\end{description*}\n",
-            "text/markdown": "Date\n:   'Date'Sales\n:   'numeric'\n\n",
-            "text/html": [
-              "<style>\n",
-              ".dl-inline {width: auto; margin:0; padding: 0}\n",
-              ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
-              ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
-              ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-              "</style><dl class=dl-inline><dt>Date</dt><dd>'Date'</dd><dt>Sales</dt><dd>'numeric'</dd></dl>\n"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 26,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "vxOD0P5wuq3K",
-        "outputId": "546da5c2-deae-418a-d631-4ed8d9ccf13e",
+        "outputId": "66faa16e-2271-4100-a6ef-2481a5c7cfc9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 97
         }
       },
       "source": [
-        "#convert the dataframe to tibble\n",
-        "Anoma_tb <- as_tibble(df)\n",
-        "head(Anoma_tb)"
+        "#convert the monthly_df to tibble\n",
+        "monthly_df <- as_tibble(monthly_df)\n",
+        "head(monthly_df)"
       ],
-      "execution_count": 44,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "  Date    Sales   \n",
-              "1 1-05-20 548.9715\n",
-              "2 3-08-20  80.2200\n",
-              "3 3-03-20 340.5255\n",
-              "4 <NA>    489.0480\n",
-              "5 2-08-20 634.3785\n",
-              "6 <NA>    627.6165"
+              "  Date month Sales   \n",
+              "1 <NA> NA    322966.7"
             ],
-            "text/latex": "A tibble: 6 × 2\n\\begin{tabular}{ll}\n Date & Sales\\\\\n <date> & <dbl>\\\\\n\\hline\n\t 1-05-20 & 548.9715\\\\\n\t 3-08-20 &  80.2200\\\\\n\t 3-03-20 & 340.5255\\\\\n\t NA & 489.0480\\\\\n\t 2-08-20 & 634.3785\\\\\n\t NA & 627.6165\\\\\n\\end{tabular}\n",
-            "text/markdown": "\nA tibble: 6 × 2\n\n| Date &lt;date&gt; | Sales &lt;dbl&gt; |\n|---|---|\n| 1-05-20 | 548.9715 |\n| 3-08-20 |  80.2200 |\n| 3-03-20 | 340.5255 |\n| NA | 489.0480 |\n| 2-08-20 | 634.3785 |\n| NA | 627.6165 |\n\n",
+            "text/latex": "A tibble: 1 × 3\n\\begin{tabular}{lll}\n Date & month & Sales\\\\\n <dttm> & <chr> & <dbl>\\\\\n\\hline\n\t NA & NA & 322966.7\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA tibble: 1 × 3\n\n| Date &lt;dttm&gt; | month &lt;chr&gt; | Sales &lt;dbl&gt; |\n|---|---|---|\n| NA | NA | 322966.7 |\n\n",
             "text/html": [
               "<table>\n",
-              "<caption>A tibble: 6 × 2</caption>\n",
+              "<caption>A tibble: 1 × 3</caption>\n",
               "<thead>\n",
-              "\t<tr><th scope=col>Date</th><th scope=col>Sales</th></tr>\n",
-              "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+              "\t<tr><th scope=col>Date</th><th scope=col>month</th><th scope=col>Sales</th></tr>\n",
+              "\t<tr><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><td>1-05-20</td><td>548.9715</td></tr>\n",
-              "\t<tr><td>3-08-20</td><td> 80.2200</td></tr>\n",
-              "\t<tr><td>3-03-20</td><td>340.5255</td></tr>\n",
-              "\t<tr><td>NA</td><td>489.0480</td></tr>\n",
-              "\t<tr><td>2-08-20</td><td>634.3785</td></tr>\n",
-              "\t<tr><td>NA</td><td>627.6165</td></tr>\n",
+              "\t<tr><td>NA</td><td>NA</td><td>322966.7</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ]
@@ -271,80 +227,43 @@
         "id": "hhEoZtLwvlY_"
       },
       "source": [
-        "Anoma_tb <- Anoma_tb %>%\n",
-        "tibbletime::as_tbl_time(index = Date)"
+        "#Detecting Anomalies in monthly sales\n",
+        "monthly_df %>%\n",
+        "  time_decompose(Sales) %>%\n",
+        "  anomalize(remainder) %>%\n",
+        "  time_recompose() %>%\n",
+        "  plot_anomalies(time_recomposed = TRUE, ncol = 3, alpha_dots = 0.5)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z8eitytHvlMW",
-        "outputId": "8ad5a168-a73f-452c-a9bb-7232062b7e26",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 950
-        }
+        "id": "Dey_j7xAY6su"
       },
       "source": [
-        "Anoma_tb %>%\n",
-        "time_decompose(Date)%>%\n",
-        "anomalize(remainder)%>%\n",
-        "time_recompose()%>%\n",
-        "plot_anomalies(time_recomposed = TRUE, ncol = 3, alpha_dots = 0.5)"
+        "# converting overall data to tibble\n",
+        "df_tibble <- as_tibble(df)"
       ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ERROR",
-          "evalue": "ignored",
-          "traceback": [
-            "Error: `nm` must be `NULL` or a character vector the same length as `x`\nTraceback:\n",
-            "1. Anoma_tb %>% time_decompose(Date) %>% anomalize(remainder) %>% \n .     time_recompose() %>% plot_anomalies(time_recomposed = TRUE, \n .     ncol = 3, alpha_dots = 0.5)",
-            "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-            "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "5. `_fseq`(`_lhs`)",
-            "6. freduce(value, `_function_list`)",
-            "7. function_list[[i]](value)",
-            "8. time_decompose(., Date)",
-            "9. time_decompose.tbl_time(., Date)",
-            "10. data %>% decompose_stl(!!target_expr, frequency = frequency, \n  .     trend = trend, message = message, ...)",
-            "11. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-            "12. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "13. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "14. `_fseq`(`_lhs`)",
-            "15. freduce(value, `_function_list`)",
-            "16. withVisible(function_list[[k]](value))",
-            "17. function_list[[k]](value)",
-            "18. decompose_stl(., !!target_expr, frequency = frequency, trend = trend, \n  .     message = message, ...)",
-            "19. time_frequency(data, period = frequency, message = message)",
-            "20. data %>% tibbletime::get_index_col() %>% timetk::tk_get_timeseries_summary()",
-            "21. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-            "22. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "23. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "24. `_fseq`(`_lhs`)",
-            "25. freduce(value, `_function_list`)",
-            "26. withVisible(function_list[[k]](value))",
-            "27. function_list[[k]](value)",
-            "28. timetk::tk_get_timeseries_summary(.)",
-            "29. tk_get_timeseries_summary.Date(.)",
-            "30. get_timeseries_summary_date(idx)",
-            "31. idx_diff %>% summary() %>% as.list() %>% purrr::set_names(c(\"diff.minimum\", \n  .     \"diff.q1\", \"diff.median\", \"diff.mean\", \"diff.q3\", \"diff.maximum\")) %>% \n  .     purrr::map_df(~.x)",
-            "32. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-            "33. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "34. eval(quote(`_fseq`(`_lhs`)), env, env)",
-            "35. `_fseq`(`_lhs`)",
-            "36. freduce(value, `_function_list`)",
-            "37. function_list[[i]](value)",
-            "38. purrr::set_names(., c(\"diff.minimum\", \"diff.q1\", \"diff.median\", \n  .     \"diff.mean\", \"diff.q3\", \"diff.maximum\"))",
-            "39. rlang::abort(x)",
-            "40. signal_abort(cnd)"
-          ]
-        }
-      ]
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X1w6F3xTY6o4"
+      },
+      "source": [
+        "#Detecting Anomalies in the entire dataset\n",
+        "df_tibble %>%\n",
+        "    time_decompose(Sales) %>%\n",
+        "    anomalize(remainder) %>%\n",
+        "    time_recompose() %>%\n",
+        "    plot_anomalies(time_recomposed = TRUE, ncol = 3, alpha_dots = 0.5)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
